--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,23 @@
   color: #61dafb;
 }
 
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr; /* 2개의 컬럼 */
+  grid-template-rows: auto 1fr; /* 첫 번째 줄은 자동 크기, 두 번째는 남은 공간 */
+  gap: 20px; /* 간격 */
+}
+
+.col {
+  display: flex;
+  flex-direction: column;
+}
+
+.row {
+  display: flex;
+  flex-direction: row;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
