Feat : 배경음악 헤더 적용용

--- a/src/components/StartButton.css
+++ b/src/components/StartButton.css
@@ -1,7 +1,9 @@
 .start-button {
   background-color: #F6F2EF;
+  color: #91745E;
 }
 
 .start-button:hover {
-  background-color: #EFEBE8;
+  background-color: #91745E;
+  color: #F6F2EF;
 }
